fix z-indexes when overlay shows

--- a/Ibis.Chat/Support/Support.scss
+++ b/Ibis.Chat/Support/Support.scss
@@ -27,6 +27,7 @@
         box-shadow: 0px 16px 24px rgba(0, 0, 0, 0.06), 0px 2px 6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
         border-radius: 53px;
         margin-bottom: 10px;
+        z-index: 1000;
 
         button {
             aspect-ratio: 1/1;
@@ -107,6 +108,7 @@
 
     &-helpdesk {
         position: relative;
+        z-index: 1000;
 
         .open-helpdesk {
             img {
