--- a/Ibis.Chat/wwwroot/css/app.css
+++ b/Ibis.Chat/wwwroot/css/app.css
@@ -1711,6 +1711,7 @@ nav li .avatar {
   box-shadow: 0px 16px 24px rgba(0, 0, 0, 0.06), 0px 2px 6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
   border-radius: 53px;
   margin-bottom: 10px;
+  z-index: 1000;
 }
 .support-language button {
   aspect-ratio: 1/1;
@@ -1771,6 +1772,7 @@ nav li .avatar {
 }
 .support-helpdesk {
   position: relative;
+  z-index: 1000;
 }
 .support-helpdesk .open-helpdesk img {
   transition: 250ms ease-in-out;
